--- a/lambdas/js/package.json
+++ b/lambdas/js/package.json
@@ -7,6 +7,6 @@
   "private": false,
   "type": "module",
   "dependencies": {
-    "aws-sdk": "^2.1484.0"
+    "@aws-sdk/client-ses": "^3.441.0"
   }
 }
